# gg

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  input.json
.cargo/: config.toml
.github/workflows/: build.yml
gg-assets/: Cargo.toml
gg-assets/src/: asset_set.rs  assets.rs  command.rs  event.rs  flag.rs  handle.rs  handle_allocator.rs  id.rs  lib.rs  loader.rs  loader_ctx.rs  loaders.rs  metadata.rs  shared.rs  source.rs  storage.rs  sync_any.rs  task.rs
gg-expr/: Cargo.toml
gg-expr/benches/: vm.rs
gg-expr/doc/book/: book.toml
gg-expr/doc/book/src/: SUMMARY.md  introduction.md  syntax.md
gg-expr/doc/book/src/syntax/: data_types.md  operator_precedence.md  variables.md
gg-expr/src/: ast.rs  compiler.rs  diagnostic.rs  error.rs  instr.rs  lib.rs  main.rs  parser.rs  source.rs  span.rs  token.rs  value.rs  vm.rs
gg-expr/src/builtins/: math.rs  mod.rs
gg-expr/src/compiler/: location.rs  mod.rs  reg_alloc.rs  scope.rs
gg-expr/src/new_compiler/: consts.rs  instr.rs  mod.rs  reg.rs  scope.rs
gg-expr/src/new_parser/: ast.rs  mod.rs  parser.rs  syntax_kind.rs
gg-expr/src/syntax/: ast.rs  kind.rs  lexer.rs  mod.rs  op.rs  parser.rs  span.rs  token.rs
gg-expr/src/value/: ext_func.rs  func.rs  mod.rs  thunk.rs
gg-expr/src/vm/: bin_op.rs  consts.rs  error.rs  instr.rs  mod.rs  ops.rs  reg.rs  upvalues.rs
gg-expr/tests/: simple.rs
gg-graphics/: Cargo.toml
gg-graphics-impl/: Cargo.toml
gg-graphics-impl/src/: backend.rs  batch.rs  bindings.rs  canvas.rs  glyphs.rs  images.rs  lib.rs  pipeline.rs  shader.wgsl
gg-graphics-impl/src/atlas/: mod.rs  pool.rs  texture.rs
gg-graphics-impl/src/atlas/allocator/: grid.rs  mod.rs  shelf.rs  tree.rs
gg-graphics/src/: backend.rs  canvas.rs  color.rs  command.rs  encoder.rs  font.rs  image.rs  lib.rs  text_layout.rs
gg-graphics/src/font/: collection.rs  db.rs  face.rs  family.rs  mod.rs
gg-input/: Cargo.toml
gg-input/src/: action.rs  binding.rs  event.rs  lib.rs  map.rs
gg-main/: Cargo.toml
gg-main/src/: fps_counter.rs  main.rs
gg-math/: Cargo.toml
gg-math/src/: affine2.rs  lib.rs  rect.rs  rotation2.rs  side_offsets.rs  vec2.rs
gg-rtti/: Cargo.toml
gg-ui/: Cargo.toml
gg-ui/src/: action.rs  any_view.rs  driver.rs  event.rs  example.rs  lib.rs  view.rs  view_ext.rs  view_seq.rs
gg-ui/src/views/: adapter.rs  button.rs  choice.rs  constrain.rs  constraint.rs  container.rs  mod.rs  nothing.rs  overlay.rs  padding.rs  rect.rs  scrollable.rs  stack.rs  stateful.rs  text.rs  tooltip.rs  touch_area.rs
gg-util/: Cargo.toml
gg-util/src/: lib.rs  rtti.rs
