[package]
name = "gg-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
gg-util = { version = "0.1.0", path = "../gg-util" }

crossbeam-channel = "0.5.5"
notify = "4.0.17"
pollster = "0.2.5"
serde = "1.0.139"
serde_json = "1.0.82"
smallvec = "1.9.0"
tracing = "0.1.35"

[dependencies.tokio]
version = "1.19.2"
features = ["rt-multi-thread", "sync"]
