[package]
name = "gg-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
gg-util = { version = "0.1.0", path = "../gg-util" }

crossbeam-channel = "0.5"
notify = "4.0"
pollster = "0.2"
serde = "1.0"
serde_json = "1.0"
smallvec = "1.9"
tracing = "0.1"

[dependencies.tokio]
version = "1.20"
features = ["rt-multi-thread", "sync"]
