[package]
name = "gg-graphics-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
gg-assets = { version = "0.1.0", path = "../gg-assets" }
gg-graphics = { version = "0.1.0", path = "../gg-graphics" }
gg-math = { version = "0.1.0", path = "../gg-math" }
gg-util = { version = "0.1.0", path = "../gg-util" }

guillotiere = "0.6.2"
pollster = "0.2.5"
tracing = "0.1.35"
wgpu = "0.13.1"

[dependencies.winit]
version = "0.26.1"
default-features = false
