[package]
name = "gg-input"
version = "0.1.0"
edition = "2021"

[dependencies]
gg-math = { version = "0.1.0", path = "../gg-math" }
gg-util = { version = "0.1.0", path = "../gg-util" }
serde = "1.0"
serde_json = "1.0"
serde_with = "2.0.0"
tracing = "0.1"
winit = { version = "0.26.1", features = ["serde"] }
