[package]
name = "gg-main"
version = "0.1.0"
edition = "2021"

[dependencies]
gg-assets = { version = "0.1.0", path = "../gg-assets" }
gg-graphics = { version = "0.1.0", path = "../gg-graphics" }
gg-graphics-impl = { version = "0.1.0", path = "../gg-graphics-impl" }
gg-math = { version = "0.1.0", path = "../gg-math" }
gg-util = { version = "0.1.0", path = "../gg-util" }

rand = "0.8.5"
tracing-subscriber = "0.3.14"

[dependencies.winit]
version = "0.26.1"
default-features = false
features = ["x11"]
